<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="36dp"
    android:paddingVertical="24dp"
    android:paddingHorizontal="27dp"
    android:background="@color/white">
    <LinearLayout
        android:id="@+id/layout_student_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/text_student_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incorrect_code"
            android:textSize="20sp"
            android:textColor="@color/Main900"
            android:textFontWeight="700"/>
    </LinearLayout>

    <TextView
        android:id="@+id/text_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/reconfirm"
        android:textSize="16sp"
        android:textColor="@color/Gray500"
        android:textFontWeight="500"
        app:layout_constraintTop_toBottomOf="@id/layout_student_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <LinearLayout
        android:layout_width="49dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:background="@drawable/btn_shape_rounded_off"
        app:layout_constraintTop_toBottomOf="@id/text_share"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="14sp"
            android:textColor="@color/Gray500"
            android:textFontWeight="500"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>