<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="10dp"
            android:src="@drawable/ic_back" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/join"
            android:textColor="@color/Main900"
            android:textSize="16sp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/parent_join_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/parent_join_first_title"
        android:textSize="16sp"
        android:layout_marginTop="36dp"
        android:layout_marginStart="24dp"
        android:textColor="@color/Main900"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/student_codes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/parent_join_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/student_code1"
            android:layout_width="48dp"
            android:layout_height="56dp"
            android:background="@drawable/edittext_border_background"/>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/student_code2"
            android:layout_width="48dp"
            android:layout_marginStart="6dp"
            android:layout_height="56dp"
            android:background="@drawable/edittext_border_background"/>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/student_code3"
            android:layout_width="48dp"
            android:layout_marginStart="6dp"
            android:layout_height="56dp"
            android:background="@drawable/edittext_border_background"/>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/student_code4"
            android:layout_width="48dp"
            android:layout_marginStart="6dp"
            android:layout_height="56dp"
            android:background="@drawable/edittext_border_background"/>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/student_code5"
            android:layout_width="48dp"
            android:layout_marginStart="6dp"
            android:layout_height="56dp"
            android:background="@drawable/edittext_border_background"/>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/student_code6"
            android:layout_width="48dp"
            android:layout_marginStart="6dp"
            android:layout_height="56dp"
            android:background="@drawable/edittext_border_background"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parent_join_first_sub_title"
        app:layout_constraintTop_toBottomOf="@id/student_codes"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/Gray500"
        android:textSize="12sp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/startBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_third_parent_message"
            android:textColor="@color/Gray500"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/Main500"
            android:background="@drawable/bottom_line"
            android:layout_marginStart="5dp"
            android:textStyle="normal"/>

    </androidx.appcompat.widget.LinearLayoutCompat>



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startBtn"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_shape_rounded_off"
        android:text="@string/next"
        android:textColor="@color/Gray500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="?android:attr/borderlessButtonStyle"
        android:layout_marginBottom="30dp"/>




</androidx.constraintlayout.widget.ConstraintLayout>
</layout>