<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/onboardingTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="100dp"
        android:text="@string/onboarding_title"
        android:textColor="@color/Main900"
        android:textSize="54sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="."
        app:layout_constraintStart_toEndOf="@id/onboardingTitleTextView"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="54dp"
        android:layout_marginTop="100dp"
        android:textColor="@color/Main500"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/onboardingSubTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/onboarding_sub_title"
        android:textColor="@color/Main900"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboardingTitleTextView" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/onboardingImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:src="@drawable/img_onboarding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onboardingSubTitleTextView" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_shape_rounded_on"
        android:text="@string/start"
        android:textColor="@color/Main900"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="?android:attr/borderlessButtonStyle"

        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"/>




</androidx.constraintlayout.widget.ConstraintLayout>
</layout>